--- a/OnePage/css/bootstrap.css
+++ b/OnePage/css/bootstrap.css
@@ -957,7 +957,7 @@ pre code {
 }
 
 .col-xs-3 {
-  width: 25%;
+  width: 20%;
 }
 
 .col-xs-2 {
@@ -1005,7 +1005,7 @@ pre code {
 }
 
 .col-xs-pull-3 {
-  right: 25%;
+  right: 20%;
 }
 
 .col-xs-pull-2 {
@@ -1057,7 +1057,7 @@ pre code {
 }
 
 .col-xs-push-3 {
-  left: 25%;
+  left: 20%;
 }
 
 .col-xs-push-2 {
@@ -4801,12 +4801,12 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-inverse {
-  background-color: #222222;
-  border-color: #080808;
+  background-color: #e74c3c;
+  border-color: #e74c3c;
 }
 
 .navbar-inverse .navbar-brand {
-  color: #999999;
+  color: #fff;
 }
 
 .navbar-inverse .navbar-brand:hover,
@@ -4820,7 +4820,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-inverse .navbar-nav > li > a {
-  color: #999999;
+  color: #fff;
 }
 
 .navbar-inverse .navbar-nav > li > a:hover,
@@ -5523,19 +5523,17 @@ a.thumbnail.active {
   display: block;
   padding: 10px 15px;
   margin-bottom: -1px;
-  background-color: #ffffff;
+  background-color: #e74c3c;
   border: 1px solid #dddddd;
 }
 
 .list-group-item:first-child {
-  border-top-right-radius: 4px;
-  border-top-left-radius: 4px;
+
 }
 
 .list-group-item:last-child {
   margin-bottom: 0;
-  border-bottom-right-radius: 4px;
-  border-bottom-left-radius: 4px;
+
 }
 
 .list-group-item > .badge {
